# alert-winglet

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pylintrc  CONTRIBUTING.md  Dockerfile.local  Dockerfile.prod  LICENSE  MANIFEST.in  Makefile  README.rst  docker-compose.local.yml  docker-compose.prod.yml  entrypoint.sh  manage.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.envs/: django.env.example  postgres.env.example  redis.env.example
.githooks/: pre-commit
.github/workflows/: publish.yaml  qa.yaml
.supervisord/: api.conf  celery_beat.conf  celery_flower.conf  celery_worker.conf  supervisord.conf
apps/alert_winglet/: apps.py
apps/alert_winglet/base/: manager.py  sender.py
apps/alert_winglet/discord/: manager.py  sender.py
apps/alert_winglet/tests/: test_manager.py  test_sender.py
apps/core/: celery.py  exceptions.py  redis.py  responses.py
apps/core/management/: templates.py
apps/core/management/commands/: checkdb.py  fcm.txt  fcmup.py  renameproject.py  startapi.py  startapp.py  startcelery.py
apps/test_api/: apps.py
apps/test_api/api/: serializers.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  apps.py  base.py  db.py  files.py  firebase.py  handler.py  redis.py  rest_framework.py  swagger.py
requirements/: base.txt  local.txt  tox.txt
