[metadata]
name = django-alert-winglet
version = 0.1.5
description = A Django app to send any exception to discord channel.
long_description_content_type = text/x-rst
long_description = file: README.rst

author = Mojtaba

author_email = Mojtabadavi14@gmail.com

license = MIT License

classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django :: 4.1
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
packages = find:
python_requires = ~=3.10
install_requires =
    Django ~= 4.1.5
    discord.py ~=2.2.3
    requests ~=2.28.2
