[metadata]
name = Testing-alert-winglet

version = 0.2.3
description = A Django app to send any exception to discord channel.
long_description_content_type = text/x-rst
long_description = file: README.rst

author = Mojtaba

author_email = Mojtabadavi14@gmail.com

license = MIT License

classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.0
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content


[options]
include_package_data = true
python_requires = ~=3.10
install_requires =
    django >= 3.0
    discord.py ~=2.2.3
    requests ~=2.28.2

